--- a/vignettes/samples_data.Rmd
+++ b/vignettes/samples_data.Rmd
@@ -114,14 +114,18 @@ Development of `dataRetrieval` will happen on a git branch called "develop" on G
 ```{r eval=FALSE}
 library(remotes)
 
-install_gitlab("water/dataRetrieval@samples_data", 
-               host = "code.usgs.gov")
+install_github("DOI-USGS/dataRetrieval",
+               ref = "develop")
 
 ```
 
 # Discrete USGS data workflow
 
-Alright, let's test out this new service!
+Alright, let's test out this new service! Here is a link to the user interface:
+<https://waterdata.usgs.gov/download-samples/>.
+
+And here is a link to the web service documentation:
+<https://api.waterdata.usgs.gov/samples-data/docs\>
 
 ## Retrieving data from a known site
 
@@ -194,22 +198,22 @@ ggplot(data = phos_narrow) +
 There are 2 arguments that dictate what kind of data is returned: dataType and dataProfile. The "dataType" argument defines what kind of data comes back, and the "dataProfile" defines what columns from that type come back.
 
 
-The possibilities are:
+The possibilities are (which match the documentation [here](https://api.waterdata.usgs.gov/samples-data/docs)):
 
-* dataType = "Results"
-  - dataProfile:  "Full physical chemical", "Basic physical chemical", "Full biological", "Basic biological", and "Narrow"
-* dataType = "Monitoring locations"
-  - dataProfile: "Site" and "Count"
-* dataType = "Activities"
-  - dataProfile: "Sample Activities", "Activity Metrics", "Activity Groups", and "Count"
+* dataType = "results"
+  - dataProfile: "fullphyschem", "basicphyschem", "fullbio", "basicbio", "narrow", "resultdetectionquantitationlimit", "labsampleprep", "count"
+* dataType = "locations"
+  - dataProfile: "site", "count"
+* dataType = "activities"
+  - dataProfile: "sampact", "actmetric", "actgroup", "count"
 * dataType = "Projects"
-  - dataProfile: "Project" and "Project Monitoring Location Weight"
-* dataType = "Organizations"
-  - dataProfile: "Organization" and "Count"
+  - dataProfile: "project", "projectmonitoringlocationweight"
+* dataType = "organizations"
+  - dataProfile: "organization" and "count"
 
 ## Geographical filters
 
-Let's say we don't know a USGS site number, but we do have an area of interest. Here are the different geographic filters available. We'll use characteristicUserSupplied == "Phosphorus as phosphorus, water, unfiltered" to limit the sites returned, and dataType = "Monitoring locations" to limit the data returned. That means we'll just be asking for what sites measured "Phosphorus as phosphorus, water, unfiltered", but not actually getting those result values.
+Let's say we don't know a USGS site number, but we do have an area of interest. Here are the different geographic filters available. We'll use characteristicUserSupplied == "Phosphorus as phosphorus, water, unfiltered" to limit the sites returned, and dataType = "locations" to limit the data returned. That means we'll just be asking for what sites measured "Phosphorus as phosphorus, water, unfiltered", but not actually getting those result values.
 
 ### Bounding Box
 
@@ -221,8 +225,8 @@ user_char <- "Phosphorus as phosphorus, water, unfiltered"
 
 bbox_sites <- read_USGS_samples(boundingBox = bbox,
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
@@ -239,8 +243,8 @@ Hydrologic Unit Codes (HUCs) identify physical areas within the US that drain to
 
 huc_sites <- read_USGS_samples(hydrologicUnit = "070700",
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
@@ -259,8 +263,8 @@ point_sites <- read_USGS_samples(pointLocationLatitude = 43.074680,
                                  pointLocationLongitude = -89.428054,
                                  pointLocationWithinMiles = 20,
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
@@ -280,8 +284,8 @@ dane_county <- countyCdLookup("WI", "Dane",
 
 county_sites <- read_USGS_samples(countyFips = dane_county,
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
@@ -301,8 +305,8 @@ state_fip <- stateCdLookup("WI", outputType = "fips")
 
 state_sites <- read_USGS_samples(stateFips = state_fip,
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
@@ -394,10 +398,10 @@ For instance, let's grab Wisconsin sites that measured phosphorus in October or 
 ```{r}
 state_sites_recent <- read_USGS_samples(stateFips = state_fip,
                                 characteristicUserSupplied = user_char,
-                                dataType = "Monitoring locations",
+                                dataType = "locations",
                                 activityStartDateLower = "2024-10-01",
                                 activityStartDateUpper = "2024-12-01",
-                                dataProfile = "Site")
+                                dataProfile = "site")
 
 ```
 
@@ -417,8 +421,8 @@ dane_county <- countyCdLookup("WI", "Dane")
 county_lake_sites <- read_USGS_samples(countyFips = dane_county,
                                 characteristicUserSupplied = user_char,
                                 siteTypeName = "Lake, Reservoir, Impoundment",
-                                dataType = "Monitoring locations",
-                                dataProfile = "Site")
+                                dataType = "locations",
+                                dataProfile = "site")
 
 ```
 
